--- a/head foot.html
+++ b/head foot.html
@@ -12,16 +12,18 @@
 <body>
     <section id="header" class="second-color">
         <a href="#"><img src="images/logo.png" class="logo" alt="" style="height: 100px; width: 100px;"></a>
-        <h1>Food Fridge Community</h1>
         <div>
-            <ul id="navbar" >
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="donate.html">Donate</a></li>
-                <li><a href="food.html">Find Food</a></li>
-                <li><a href="volunteer.html">Volunteer</a></li>
-                <button>Login/Signup</button>
-            </ul>
+        <h1>Food Fridge Community</h1>
+            <div>
+                <ul id="navbar" >
+                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="donate.html">Donate</a></li>
+                    <li><a href="food.html">Find Food</a></li>
+                    <li><a href="volunteer.html">Volunteer</a></li>
+                    <button>Login/Signup</button>
+                </ul>
+            </div>
         </div>
     </section>
     <footer class="section-p1">
