--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,25 +8,13 @@
     <link rel="icon" type="image/x-icon" href="images/logo.png">
     <script src="https://kit.fontawesome.com/5889382239.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="script" href="script.js">
 </head>
-
 <body>
     <section id="header" class="second-color">
-            <a href="#"><img src="images/logo.png" class="logo" alt="" style="height: 100px; width: 100px;"></a>
+        <a href="#"><img src="images/logo.png" class="logo" alt="" style="height: 100px; width: 100px;"></a>
+        <div>
             <h1>Food Fridge Community</h1>
-            <!-- <input type="checkbox" id="check" />
-            <div class="btn_one">
-                <label for="check">
-                    <i class="fa-solid fa-bars"></i>
-                </label>
-            </div> -->
             <div class="sidebar_menu">
-                <!-- <div class="btn_two">
-                    <label for="check" style="color: grey">
-                        <i class="fa-solid fa-xmark"></i>
-                    </label>
-                </div> -->
                 <ul id="navbar">
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -37,6 +24,7 @@
                     <button>Login/Signup</button>
                 </ul>
             </div>
+        </div>
     </section>
     <section id="hero">
         <div class="carousel-container">
@@ -167,4 +155,6 @@
             <p><i class="fa-regular fa-copyright"></i> Copyright 2024 Food Fridge Community all rights reserved.</p>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
+</html>
