--- a/community.html
+++ b/community.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Food Fridge</title>
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="volunteer.css">
+    <link rel="stylesheet" href="community.css">
     <script src="https://kit.fontawesome.com/5889382239.js" crossorigin="anonymous"></script>
 
 </head>
@@ -15,11 +15,11 @@
             <a href="#" class="logo"><img src="images/logo.png" alt=""></a>
             <span class="company-name">Community Food Fridge</span>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Donate</a></li>
-                <li><a href="#">Find Food</a></li>
-                <li><a href="#">Volunteer</a></li>
+                <li><a class="active"  href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a  href="donate.html">Donate</a></li>
+                <li><a href="food.html">Find Food</a></li>
+                <li><a class="active" href="#">Community</a></li>
                 <li><a href="#">Sign In/Sign Up</a></li>
             </ul>
         </div>
@@ -37,12 +37,12 @@
         <h2>Meet the 1,637 members in the Community Fridge community</h2>
         <div class="team">
             <div>
-                <span>CM</span>
-                <p>Claudia Moore</p>
+                <span>OM</span>
+                <p>Om Prakash Barik</p>
                 <p>(Admin)</p>
             </div>
             <div>
-                <span>Hubbub Team</span>
+                <span>Fewd Team</span>
                 <p>(Admin)</p>
             </div>
         </div>
@@ -72,7 +72,7 @@
       <h4>Categories</h4>
       <a href="#">Donate Food</a>
       <a href="#">Find Food</a>
-      <a href="#">Become a Volunteer</a>
+      <a href="#">Community</a>
       <a href="#">Blogs</a>
       <a href="#">Support Us</a>
   </div>
